# meshlink-node

./: .gitignore  .gitmodules  README.md  directory_cache.json  node_identity.json  node_info.example.json  phase4-parity-reconciliation.md  pyproject.toml  wifi_deployment.conf
docs/: heartbeat-payload.md  node-served-location.md  phase6-node-decisions.md  phase7-node-decisions.md  phone-ping-app-spec.md  wifi-ap-deployment.md
docs/demos/: phase2-node-relay.md  phase3-multi-node-topology.md
docs/tests/: 3-node-relay-test.md  mac-2node-relay-test.md  phase2-mac-relay-log-2026-07-04.md
node/: backend_proxy.py  config.py  main.py  relay.py
node/attestation/: __init__.py  organiser_key.py  token_cache.py
node/backhaul/: base.py  batman_backhaul.py  dynamic_zone_table.py  radio_config.py  static_zone_table.py  zone_sync.py
node/ble/: README.md  __init__.py  base.py  bluez.py  corebluetooth.py  framing.py  gatt_server.py
node/core/: __init__.py
node/directory/: cache.py
node/location/: authz.py  service.py  store.py
node/monitoring/: battery.py  heartbeat_sender.py  phone_ping.py  system_stats.py
node/transport/: ble_transport.py  multi_transport.py  wifi_transport.py
node/wifi_ap/: __init__.py  base.py  deployment_config.py  hostapd.py  hostapd_config.py  internet_sharing.py
scripts/: demo_phase5_attestation.py  meshlink-node.service  run-mac-node.sh  setup-pi.sh  setup_backhaul_radio.sh  setup_batman.sh  setup_hostapd.sh  verify_ssid_consistency.sh
tests/: helpers.py  test_ap_provisioner.py  test_attestation.py  test_backend_proxy.py  test_backhaul_config.py  test_batman_backhaul.py  test_battery.py  test_ble_transport.py  test_core_parity.py  test_deployment_config.py  test_directory_cache.py  test_dynamic_zone_table.py  test_framing.py  test_gatt_base.py  test_heartbeat_sender.py  test_hostapd_config.py  test_integration_friendship.py  test_location_authz.py  test_location_relay.py  test_location_store.py  test_organiser_key.py  test_phone_ping.py  test_radio_config.py  test_relay.py  test_static_zone_table.py  test_wifi_transport.py  test_zone_id.py  test_zone_sync.py
tests/fixtures/: parity_vectors.json
