[project]
name = "meshlink-node"
version = "0.1.0"
description = "MeshLink Raspberry Pi node — BLE peripheral relay backbone"
requires-python = ">=3.10"
dependencies = [
    # BlueZ D-Bus bindings. On Raspberry Pi OS install the system packages
    # instead of building from pip (see README): python3-dbus, python3-gi.
    "dbus-python; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "PyGObject; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    # CoreBluetooth bindings for the macOS development backend.
    "pyobjc-framework-CoreBluetooth; sys_platform == 'darwin'",
    # meshlink-core (Phase 4) runtime crypto/dedup deps. Core is vendored as a
    # git submodule rather than pip-installed (see node/core/__init__.py), so
    # its own pyproject dependencies aren't resolved for us — they're declared
    # here and must stay in sync with vendor/meshlink-core/pyproject.toml.
    "pynacl>=1.6.2",      # Ed25519 signing/verification (libsodium)
    "pybloom-live>=4.0.0",  # dedup Bloom filter
    "blake3>=1.0.9",      # ephemeral-id derivation
    # Phase 5 attestation token verification (pipeline step 7). Same pair the
    # backend uses to issue tokens — versions kept aligned with
    # meshlink-backend/pyproject.toml.
    "pyjwt>=2.9",         # EdDSA compact JWT decode
    "cryptography>=43",   # Ed25519 public key for PyJWT
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = [".", "vendor/meshlink-core"]
testpaths = ["tests"]
